@@ -9,6 +9,9 @@ debian-installer (20040210) UNRELEASED; urgency=low
     - sparc: Add manifest lines to configuration file.
     - ia64: Add manifest lines to configuration file.
     - Bump mklibs dependancy to 0.1.15.  Fixes needed for sparc.
+    - Uncomment ths' code for handling multiple System.map files,
+      conditionalise with VERSIONED_SYSTEM_MAP
+    - sparc: Define VERSIONED_SYSTEM_MAP
   * Stephen R. Marenka
     - m68k mac build fixes.
 
